[project]
name = "data-dashboard-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.3",
    "connectorx>=0.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]
