[project]
name = "streamlit-dashboard-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2025.8.0",
    "connectorx>=0.4.4",
    "faker>=38.2.0",
    "fsspec>=2025.10.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "s3fs>=2025.10.0",
    "streamlit>=1.50.0",
]
